<?xml version="1.0" encoding="utf-8"?>
<!--Layout for Questionnaire Content Screen/Activity-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".Questionnaire">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="217dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtQuestionHead1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_qh1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <TextView
                        android:id="@+id/txt_q1q"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_q1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_check1" />

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_check2" />

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_check3" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="172dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="541dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_q2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_qh2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_q2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/questionnaire_radio1" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/questionnaire_radio2" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/questionnaire_radio3" />
                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_q3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_qh3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                    <TextView
                        android:id="@+id/txt_q3q"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionnaire_q3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/questionnaire_q3"
                        app:srcCompat="@drawable/steps" />

                    <EditText
                        android:id="@+id/mtxt_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/ignore"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        tools:LabelFor="Answer" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionnaire_submit" />
            </LinearLayout>
        </LinearLayout>



</ScrollView>