<?xml version="1.0" encoding="utf-8"?>
<!--Layout for Home Page/Activity-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_image"
            tools:srcCompat="@drawable/download" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/purple_700" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/intro2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/teal_700" />

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:text="@string/intro31" />

        <CheckedTextView
            android:id="@+id/checkedTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:text="@string/intro32" />

        <CheckedTextView
            android:id="@+id/checkedTextView3"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:checkMark="@android:drawable/checkbox_on_background"
            android:text="@string/intro33" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            app:backgroundTint="@color/design_default_color_primary"
            app:fabAlignmentMode="end"
            app:fabCradleMargin="22dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp"
            android:focusable="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/menuitems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:menu="@menu/app_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/main_follow_us"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_share"
            app:layout_anchor="@id/bottomAppBar"
            app:layout_anchorGravity="end">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabYouTube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/main_follow_us"
            android:focusable="true"
            android:src="@android:drawable/ic_media_play"
            app:fabSize="mini"
            app:layout_anchor="@id/floatingActionButton"
            app:layout_anchorGravity="left" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTwitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/main_follow_us"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_sort_alphabetically"
            app:fabSize="mini"
            app:layout_anchor="@id/floatingActionButton"
            app:layout_anchorGravity="end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
